# stockai

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD-opencode-integration.md  README.md  pyproject.toml
.kai/agents/: stockai-analyst.md  stockai-risk.md  stockai-trader.md  stockai.md
_bmad-output/: architecture.md  epics-and-stories.md  party-mode-gap-analysis.md  prd.md  project-context.md  ux-design.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: kai-code-integration.md
docs/plans/: 2025-01-06-autopilot-trading-design.md  2026-01-03-multi-agent-trading-system-design.md  2026-01-06-autopilot-ai-validation-design.md  2026-01-06-stockai-implementation-plan.md  2026-01-06-stockai-quality-over-quantity-design.md
examples/: interactive_demo.py  kai_agent_demo.py  llm_usage_demo.py
scripts/: cron_install.py  intraday_push.py  render_backtest_report.py  seed_backtest.py  tune_gates.py
src/stockai/: __init__.py  __main__.py  config.py
src/stockai/agent/: __init__.py  orchestrator.py  state.py
src/stockai/agent/memory/: __init__.py  conversation.py
src/stockai/agent/phases/: __init__.py  action.py  answer.py  planning.py  validation.py
src/stockai/agents/: __init__.py  config.py  focused_prompts.py  focused_validator.py  orchestrator.py  prompts.py  subagents.py  tools.py
src/stockai/automation/: __init__.py  notifier.py  runner.py  scheduler.py
src/stockai/autopilot/: __init__.py  engine.py  executor.py  validator.py
src/stockai/briefing/: __init__.py  daily.py  weekly.py
src/stockai/cli/: __init__.py  main.py
src/stockai/data/: __init__.py  cache.py  database.py  listings.py  models.py  sectors.py
src/stockai/intraday/: __init__.py  backtest.py  models.py  planner.py  regime.py  reporter.py  scoring.py  storage.py
src/stockai/kai_tools/: __init__.py
src/stockai/risk/: __init__.py  diversification.py  portfolio_risk.py  position_sizing.py
src/stockai/scoring/: __init__.py  analyzer.py  factors.py  gates.py  screener.py  signals.py  smart_money.py  support_resistance.py  trade_plan.py
src/stockai/tools/: __init__.py  registry.py  stock_tools.py
src/stockai/tutorial/: __init__.py  lessons.py  paper_trading.py  quiz.py
src/stockai/web/: __init__.py  app.py  routes.py  schemas.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_agent.py  test_analyzer_flow.py  test_cli_setup.py  test_database.py  test_idx_index.py  test_portfolio.py  test_prediction_accuracy.py  test_predictor.py  test_sentiment.py  test_watchlist.py  test_web.py  test_yahoo_finance.py
tests/integration/: test_kai_agents.py  test_llm_queries.py  test_real_queries.py
tests/unit/: __init__.py  conftest.py  test_agents.py  test_autopilot.py  test_cache.py  test_quality_gates.py  test_smart_money_v2.py  test_volume_tools.py  test_watchlist_service.py
(+29 files in other folders)
